load("@io_bazel_rules_go//go/private:go_toolchain.bzl", "declare_bazel_toolchains")

{version_constants}

package(default_visibility = ["//visibility:public"])

declare_bazel_toolchains(
    go_toolchain_repo = "@{sdk_repo}",
    host_goarch = "{goarch}",
    host_goos = "{goos}",
    major = MAJOR_VERSION,
    minor = MINOR_VERSION,
    patch = PATCH_VERSION,
    prerelease = PRERELEASE_SUFFIX,
    sdk_type = "{sdk_type}",
)
