load("@my_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["lib.go"],
    importpath = "example.com/lib",
)

go_binary(
    name = "main",
    srcs = ["main.go"],
    deps = [":lib"],
)

go_test(
    name = "test",
    srcs = ["test.go"],
    embed = [":lib"],
)
