load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["library.bzl"])

filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:mode",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/rules:transition",
    ],
)

bzl_library(
    name = "cgo",
    srcs = ["cgo.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:mode",
    ],  # keep
)

bzl_library(
    name = "info",
    srcs = ["info.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = ["@io_bazel_rules_go//go/private:context"],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "nogo",
    srcs = ["nogo.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = [
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/rules:transition",
    ],
)

bzl_library(
    name = "sdk",
    srcs = ["sdk.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = ["@io_bazel_rules_go//go/private:providers"],
)

bzl_library(
    name = "source",
    srcs = ["source.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "stdlib",
    srcs = ["stdlib.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = [
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "@bazel_skylib//lib:structs",
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:mode",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/rules:binary",
        "@io_bazel_rules_go//go/private/rules:transition",
    ],
)

bzl_library(
    name = "transition",
    srcs = ["transition.bzl"],
    visibility = [
        "//go:__subpackages__",
        "//proto:__pkg__",
    ],
    deps = [
        "@io_bazel_rules_go//go/platform:crosstool",
        "@io_bazel_rules_go//go/private:mode",
        "@io_bazel_rules_go//go/private:platforms",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "wrappers",
    srcs = ["wrappers.bzl"],
    visibility = ["//go:__subpackages__"],
    deps = [
        "@io_bazel_rules_go//go/private/rules:binary",
        "@io_bazel_rules_go//go/private/rules:cgo",
        "@io_bazel_rules_go//go/private/rules:library",
        "@io_bazel_rules_go//go/private/rules:test",
        "@io_bazel_rules_go//go/private/rules:transition",
    ],
)
