load("//go:def.bzl", "go_binary", "go_library")
load(":aspect.bzl", "bazel_supports_canonical_label_literals")
load("//go/private:common.bzl", "RULES_GO_REPO_NAME")

go_library(
    name = "gopackagesdriver_lib",
    srcs = [
        "bazel.go",
        "bazel_json_builder.go",
        "build_context.go",
        "driver_request.go",
        "flatpackage.go",
        "json_packages_driver.go",
        "main.go",
        "packageregistry.go",
        "utils.go",
    ],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gopackagesdriver",
    embed = [":gopackagesdriver_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        # Determine the repository part of labels pointing into the rules_go repo. This is needed
        # both to specify the aspect and to match labels in query output.
        "rulesGoRepositoryName": RULES_GO_REPO_NAME,
    },
)
