load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Common rules
proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
    proto = ":foo_proto",
)

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    deps = [":foo_proto"],
)

go_proto_library(
    name = "bar_go_proto",
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/bar",
    proto = ":bar_proto",
    deps = [":foo_go_proto"],
)

proto_library(
    name = "grpc_proto",
    srcs = ["grpc.proto"],
)

# embed_test
go_proto_library(
    name = "embed_go_proto",
    embed = [":extra_lib"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
    proto = ":foo_proto",
)

go_library(
    name = "extra_lib",
    srcs = ["extra.go"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
)

go_test(
    name = "embed_test",
    srcs = ["embed_test.go"],
    deps = [
        ":embed_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

# transitive_test
go_proto_library(
    name = "transitive_go_proto",
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/bar",
    proto = ":bar_proto",
    deps = [":wrap_lib"],
)

go_library(
    name = "wrap_lib",
    srcs = ["extra.go"],
    embed = [":foo_go_proto"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
)

go_test(
    name = "transitive_test",
    srcs = ["transitive_test.go"],
    deps = [
        ":transitive_go_proto",
        ":wrap_lib",
    ],
)

# gofast test
go_test(
    name = "gofast_test",
    srcs = ["gofast_test.go"],
    deps = [":gofast_proto"],
)

go_proto_library(
    name = "gofast_proto",
    compilers = ["@io_bazel_rules_go//proto:gofast_proto"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
    proto = ":foo_proto",
)

# gofast gRPC test
go_test(
    name = "gofast_grpc_test",
    srcs = ["gofast_grpc_test.go"],
    deps = [":gofast_grpc"],
)

go_proto_library(
    name = "gofast_grpc",
    compilers = ["@io_bazel_rules_go//proto:gofast_grpc"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/grpc",
    proto = ":grpc_proto",
)

# gogofast test
go_test(
    name = "gogofast_test",
    srcs = ["gogofast_test.go"],
    deps = [":gogofast_proto"],
)

go_proto_library(
    name = "gogofast_proto",
    compilers = ["@io_bazel_rules_go//proto:gogofast_proto"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/foo",
    proto = ":foo_proto",
)

# gogofast gRPC test
go_test(
    name = "gogofast_grpc_test",
    srcs = ["gogofast_grpc_test.go"],
    deps = [":gogofast_grpc"],
)

go_proto_library(
    name = "gogofast_grpc",
    compilers = ["@io_bazel_rules_go//proto:gogofast_grpc"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_library/grpc",
    proto = ":grpc_proto",
)
